@@ -32,6 +32,24 @@
 ## System
 ## =============================================================================
 
+# Installation Secret
+# A randomly generated 32 to 64 character string using the characters 0-9, A-Z,
+# a-z, underscore (_) and dash (-). This is used to improve the security of
+# your Panopticon installation.
+# You can generate a random secret at
+# https://www.random.org/passwords/?num=1&len=32&format=plain&rnd=new
+PANOPTICON_SECRET=00CHANGEme00changeME00ChangeMe00
+
+# Session Path Levels
+# Sessions will be stored in this many directory levels. Set to 1 or 2 if you
+# have thousands of concurrent sessions.
+PANOPTICON_SESSION_SAVE_LEVELS=0
+
+# Encrypt Session Data
+# Set to true (default) to encrypt the session data using the Installation
+# Secret.
+PANOPTICON_SESSION_ENCRYPT=1
+
 # Session Timeout
 # How long is a login session valid for [minutes].
 PANOPTICON_SESSION_TIMEOUT=1440
