@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+    <system.web>
+        <authorization>
+          <deny users ="*" />
+        </authorization>
+    </system.web>
+</configuration>
