@@ -1210,6 +1210,7 @@ PANOPTICON_SYSCONFIG_TITLE="System Configuration"
 PANOPTICON_SYSCONFIG_ERR_USING_DOTENV="You cannot view or modify the System Configuration in Panopticon when using .env files for its configuration. Please edit the .env file itself."
 PANOPTICON_SYSCONFIG_BTN_PHPINFO="PHP Information"
 PANOPTICON_SYSCONFIG_LBL_TAB_SYSTEM="System"
+PANOPTICON_SYSCONFIG_LBL_TAB_SECURITY="Security"
 PANOPTICON_SYSCONFIG_LBL_TAB_DISPLAY="Display"
 PANOPTICON_SYSCONFIG_LBL_TAB_AUTOMATION="Automatic Tasks"
 PANOPTICON_SYSCONFIG_LBL_TAB_EMAIL="Email"
@@ -1230,6 +1231,7 @@ PANOPTICON_SYSCONFIG_LBL_SUBHEAD_UPTIME="Uptime Monitoring"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_SYSTEM="System Preferences"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_LOGINFAIL="Automatic IP blocking"
 PANOPTICON_SYSCONFIG_LBL_SUBHEAD_PASSWORD_SECURITY="Password Security"
+PANOPTICON_SYSCONFIG_LBL_SUBHEAD_SESSION="Session Storage"
 PANOPTICON_SYSCONFIG_NO_EXTENSIONS_HEAD="No extensions found"
 PANOPTICON_SYSCONFIG_NO_EXTENSIONS_BODY="Set up your sites and wait until their extension update information refreshes - up to 15 minutes later. You will then see all of their installed extensions here."
 PANOPTICON_SYSCONFIG_LBL_FIELD_LIVE_SITE="Panopticon URL"
@@ -1331,6 +1333,10 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_PROXY_NO="Do Not Proxy These Domains"
 PANOPTICON_SYSCONFIG_LBL_FIELD_PROXY_NO_HELP="Enter a comma–separated list of full, or partial domain names which should not go through the proxy, e.g. <code>www.example.com, .mit.edu, .dev</code>."
 PANOPTICON_SYSCONFIG_LBL_FIELD_FINISHED_SETUP="Is installing Panopticon finished?"
 PANOPTICON_SYSCONFIG_LBL_FIELD_BEHIND_LOAD_BALANCER="Behind load balancer / reverse proxy"
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT="Encrypt session data"
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT_HELP="Session data will be stored on disk encrypted with a secret key unique to your Panopticon installation."
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS="Session Path Levels"
+PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS_HELP="Session save data files will be saved this many folders deep. 0 means all files in a single folder. Best keep it 0 unless you have thousands of concurrent sessions."
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_TABLE_CAPTION="Table of known extensions and their automatic update preferences"
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_CMS="CMS Type"
 PANOPTICON_SYSCONFIG_LBL_EXTENSIONS_NAME="Extension name"
